// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedChatBubble — guide messages renders source badge for guide message with source="ai-offline" 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "opacity": 0,
      "transform": [
        {
          "translateY": 12,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "elevation": 2,
            "justifyContent": "center",
            "shadowColor": "#B8623A",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#E8845C",
            "borderRadius": 16,
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "backgroundColor": "rgba(255,229,212,0.55)",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "height": 14.4,
            "left": 1,
            "position": "absolute",
            "right": 1,
            "top": 1,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontWeight": "700",
              "marginTop": -1,
            },
            {
              "fontSize": 16.64,
            },
          ]
        }
      >
        ◇
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "maxWidth": "82%",
          "paddingHorizontal": 14,
          "paddingVertical": 11,
        },
        {
          "backgroundColor": "#FFF7EB",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 18,
          "borderColor": "#EFE0C5",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "shadowColor": "#B8623A",
          "shadowOffset": {
            "height": 3,
            "width": 3,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 12,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#3D2B1F",
            "fontFamily": "Nunito_500Medium",
            "fontSize": 13.5,
            "lineHeight": 20,
          },
        ]
      }
    >
      Here is what I found for you.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "flex-end",
          "marginTop": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 10,
              "borderWidth": 1,
              "flexDirection": "row",
              "paddingHorizontal": 6,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#FBEBD0",
              "borderColor": "#E8A84E",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Nunito_700Bold",
                "fontSize": 11,
                "lineHeight": 13,
              },
              {
                "color": "#8A4B00",
              },
            ]
          }
        >
          ⚠
           
          Offline AI · may be inaccurate
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AnimatedChatBubble — guide messages renders source badge for guide message with source="ai-online" 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "opacity": 0,
      "transform": [
        {
          "translateY": 12,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "elevation": 2,
            "justifyContent": "center",
            "shadowColor": "#B8623A",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#E8845C",
            "borderRadius": 16,
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "backgroundColor": "rgba(255,229,212,0.55)",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "height": 14.4,
            "left": 1,
            "position": "absolute",
            "right": 1,
            "top": 1,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontWeight": "700",
              "marginTop": -1,
            },
            {
              "fontSize": 16.64,
            },
          ]
        }
      >
        ◇
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "maxWidth": "82%",
          "paddingHorizontal": 14,
          "paddingVertical": 11,
        },
        {
          "backgroundColor": "#FFF7EB",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 18,
          "borderColor": "#EFE0C5",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "shadowColor": "#B8623A",
          "shadowOffset": {
            "height": 3,
            "width": 3,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 12,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#3D2B1F",
            "fontFamily": "Nunito_500Medium",
            "fontSize": 13.5,
            "lineHeight": 20,
          },
        ]
      }
    >
      Here is what I found for you.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "flex-end",
          "marginTop": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 10,
              "borderWidth": 1,
              "flexDirection": "row",
              "paddingHorizontal": 6,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#FBE4D7",
              "borderColor": "#B8623A",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Nunito_700Bold",
                "fontSize": 11,
                "lineHeight": 13,
              },
              {
                "color": "#B8623A",
              },
            ]
          }
        >
          🧠
           
          AI
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AnimatedChatBubble — guide messages renders source badge for guide message with source="maps" 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "opacity": 0,
      "transform": [
        {
          "translateY": 12,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "elevation": 2,
            "justifyContent": "center",
            "shadowColor": "#B8623A",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#E8845C",
            "borderRadius": 16,
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "backgroundColor": "rgba(255,229,212,0.55)",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "height": 14.4,
            "left": 1,
            "position": "absolute",
            "right": 1,
            "top": 1,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontWeight": "700",
              "marginTop": -1,
            },
            {
              "fontSize": 16.64,
            },
          ]
        }
      >
        ◇
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "maxWidth": "82%",
          "paddingHorizontal": 14,
          "paddingVertical": 11,
        },
        {
          "backgroundColor": "#FFF7EB",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 18,
          "borderColor": "#EFE0C5",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "shadowColor": "#B8623A",
          "shadowOffset": {
            "height": 3,
            "width": 3,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 12,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#3D2B1F",
            "fontFamily": "Nunito_500Medium",
            "fontSize": 13.5,
            "lineHeight": 20,
          },
        ]
      }
    >
      Here is what I found for you.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "flex-end",
          "marginTop": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 10,
              "borderWidth": 1,
              "flexDirection": "row",
              "paddingHorizontal": 6,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#D9EAF5",
              "borderColor": "#A9CCE0",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Nunito_700Bold",
                "fontSize": 11,
                "lineHeight": 13,
              },
              {
                "color": "#1A4D6E",
              },
            ]
          }
        >
          🗺
           
          Maps
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AnimatedChatBubble — guide messages renders source badge for guide message with source="wikipedia" 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 10,
      "opacity": 0,
      "transform": [
        {
          "translateY": 12,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "elevation": 2,
            "justifyContent": "center",
            "shadowColor": "#B8623A",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4,
          },
          {
            "backgroundColor": "#E8845C",
            "borderRadius": 16,
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "backgroundColor": "rgba(255,229,212,0.55)",
            "borderTopLeftRadius": 16,
            "borderTopRightRadius": 16,
            "height": 14.4,
            "left": 1,
            "position": "absolute",
            "right": 1,
            "top": 1,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontWeight": "700",
              "marginTop": -1,
            },
            {
              "fontSize": 16.64,
            },
          ]
        }
      >
        ◇
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "maxWidth": "82%",
          "paddingHorizontal": 14,
          "paddingVertical": 11,
        },
        {
          "backgroundColor": "#FFF7EB",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 18,
          "borderColor": "#EFE0C5",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "shadowColor": "#B8623A",
          "shadowOffset": {
            "height": 3,
            "width": 3,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 12,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#3D2B1F",
            "fontFamily": "Nunito_500Medium",
            "fontSize": 13.5,
            "lineHeight": 20,
          },
        ]
      }
    >
      Here is what I found for you.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "flex-end",
          "marginTop": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 10,
              "borderWidth": 1,
              "flexDirection": "row",
              "paddingHorizontal": 6,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#FFF7EB",
              "borderColor": "#EFE0C5",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Nunito_700Bold",
                "fontSize": 11,
                "lineHeight": 13,
              },
              {
                "color": "#8A7260",
              },
            ]
          }
        >
          📖
           
          Wikipedia
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SourceBadge renders ai-offline variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FBEBD0",
        "borderColor": "#E8A84E",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito_700Bold",
          "fontSize": 11,
          "lineHeight": 13,
        },
        {
          "color": "#8A4B00",
        },
      ]
    }
  >
    ⚠
     
    Offline AI · may be inaccurate
  </Text>
</View>
`;

exports[`SourceBadge renders ai-online variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FBE4D7",
        "borderColor": "#B8623A",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito_700Bold",
          "fontSize": 11,
          "lineHeight": 13,
        },
        {
          "color": "#B8623A",
        },
      ]
    }
  >
    🧠
     
    AI
  </Text>
</View>
`;

exports[`SourceBadge renders maps variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#D9EAF5",
        "borderColor": "#A9CCE0",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito_700Bold",
          "fontSize": 11,
          "lineHeight": 13,
        },
        {
          "color": "#1A4D6E",
        },
      ]
    }
  >
    🗺
     
    Maps
  </Text>
</View>
`;

exports[`SourceBadge renders wikipedia variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FFF7EB",
        "borderColor": "#EFE0C5",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito_700Bold",
          "fontSize": 11,
          "lineHeight": 13,
        },
        {
          "color": "#8A7260",
        },
      ]
    }
  >
    📖
     
    Wikipedia
  </Text>
</View>
`;
